tests/ui/did_you_mean/issue-38054-do-not-show-unresolved-names.rs
//@ edition:2015
use Foo; //~ ERROR unresolved

use Foo1; //~ ERROR unresolved

fn main() {}

// ferrocene-annotations: fls_9gprp17h6t1q
// Use Imports
